--- a/main/static/account.css
+++ b/main/static/account.css
@@ -26,34 +26,27 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    /* border: #a4cfbc;
-    border-radius: 3px; */
+
 }
 .account-heading {
+    margin-left: 90px;
     margin-top: 50px;
     font-size: 28px;
   }
 .text-secondary{
+    margin-left: 150px;
     font-size: 15px;
     margin-bottom: 50px;
 }
 
-/* .wrapper {
-    margin-top: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  } */
+
 .input_field {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-/* .input_field {
-    margin-bottom: 20px;
-    text-align: center;
-} */
+
 
 .form-control {
     text-align: center;
