--- a/main/templates/account_plan.html
+++ b/main/templates/account_plan.html
@@ -1,21 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
-<link href="{{ url_for('static', filename='calculator.css') }}" rel="stylesheet">
-<div class="wrapper">
-<div class="content-section">
+    <link href="{{ url_for('static', filename='account_plan.css') }}" rel="stylesheet">
+    <div class="wrapper">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class = "form">
             <div class = "title">
             Choose your plan
             </div>
-            <div class="input_field">
+            <div class="input_field_check_box">
                 {% for option in choice_form.plan_choice %}
                     {{ option() }}
                     {{ option.label }}
                 {% endfor %}
             </div>
-            <div, id = 'result'>Total Calories: {{ current_user.calories }}</div>
             <div class="input_field">
                 {{ form.proteins.label(class="form-control-label")}}
                 {% if form.proteins.errors %}
@@ -54,21 +52,9 @@
             {% else %}
                 {{ form.fats(class="form-control form-control-xxl", onchange="updateValues()")}}
             {% endif%}
-            </div>
-            <div class="input_field">
-                {{ form.servings.label(class="form-control-label")}}
-                {% if form.servings.errors %}
-                    {{ form.servings(class="form-control form-control-xxl is-invalid")}}
-                    <div class='invalid-feedback'>
-                        {% for error in form.servings.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.servings(class="form-control form-control-xxl", onchange="updateValues()")}}
-                {% endif%}
-            </div>
+        </div>
         </fieldset>
+        <div id = 'result'>Total Calories: {{ current_user.calories }}</div>
         <div class="input_field">
             {{ choice_form.submit(class="btn btn-outline-info")}}
         </div>
@@ -80,13 +66,12 @@
       const protein = parseInt(document.getElementById("proteins").value) || 0;
       const carbs = parseInt(document.getElementById("carbs").value) || 0;
       const fats = parseInt(document.getElementById("fats").value) || 0;
-  
+
       // Calculate the result
       const result = protein * 4 + carbs * 4 + fats * 9;
-  
+
       // Update the text of the result box
       document.getElementById("result").innerText = "Total Calories: " + result;
     }
   </script>
 {% endblock content %}
-    
