--- a/main/templates/meals.html
+++ b/main/templates/meals.html
@@ -1,9 +1,13 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
+<link href="{{ url_for('static', filename='meals.css') }}" rel="stylesheet">
+    <div class="wrapper">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
-        <legend class="border-bottom mb-4">Test Form</legend>
+        <div class = "title">
+            Choose avaible dishes
+        </div>
+        <!-- <legend class="border-bottom mb-4">Choose avaible dishes</legend> -->
         {{ form.search() }} <br>
         {% if form.meals.errors %}
             <div class="invalid-feedback">
