--- a/main/templates/account_update.html
+++ b/main/templates/account_update.html
@@ -1,142 +1,152 @@
 {% extends "layout.html" %}
 {% block content %}
-    <link href="{{ url_for('static', filename='account_update.css') }}" rel="stylesheet">
-    <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
-        <div class="media-body ml-3">
-            <h2 class="account-heading">{{ current_user.username }}</h2>
-            <p class="text-secondary">{{ current_user.email }}</p>
-            <!-- <h3 class="secondary">My Daily Calories Intake: {{ current_user.calories }}</h3>
-            <h4 class="secondary">Proteins: {{ current_user.proteins }}</h4>
-            <h4 class="secondary">Carbohydrates: {{ current_user.carbs }}</h4>
-            <h4 class="secondary">Fats: {{ current_user.fats }}</h4> -->
+    <div class="content-section">
+        <div class="media">
+            <img class="rounded-circle account-img" src="{{ image_file }}">
+            <div class="media-body">
+                <h2 class="account-heading">{{ current_user.username }}</h2>
+                <p class="text-secondary">{{ current_user.email }}</p>
+                <p></p>
+                <h3 class="text-secondary">My Daily Calories Intake: {{ current_user.calories }}</h3>
+                <h4 class="text-secondary">Proteins: {{ current_user.proteins }}</h4>
+                <h4 class="text-secondary">Carbohydrates: {{ current_user.carbs }}</h4>
+                <h4 class="text-secondary">Fats: {{ current_user.fats }}</h4>
+            </div>
         </div>
-    </div>
-    <div class="wrapper">
+        <div class="content-section">
         <form method="POST" action="" enctype="multipart/form-data">
-        {{ form.hidden_tag() }}
-        <fieldset class="form">
-            <div class = "title">
-            Account Info
-            </div>
-            <div class="input_field">
-                {{ form.username.label(class="form-control-label") }}
-                {% if form.username.errors %}
-                    {{ form.username(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.username.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Account Info</legend>
+                <div class="form-group">
+                    {{ form.username.label(class="form-control-label") }}
+                    {% if form.username.errors %}
+                        {{ form.username(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.username.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.username(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.email.label(class="form-control-label") }}
+                    {% if form.email.errors %}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.email.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                    <div class="form-group">
+                        {{ form.sex.label(class="form-control-label") }}
+                        {% if form.sex.errors %}
+                            {{ form.sex(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.sex.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.sex(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.username(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.email.label(class="form-control-label") }}
-                {% if form.email.errors %}
-                    {{ form.email(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.email.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="form-group">
+                        {{ form.age.label(class="form-control-label") }}
+                        {% if form.age.errors %}
+                            {{ form.age(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.age.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.age(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.email(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.sex.label(class="form-control-label") }}
-                {% if form.sex.errors %}
-                    {{ form.sex(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.sex.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="form-group">
+                        {{ form.weight.label(class="form-control-label") }}
+                        {% if form.weight.errors %}
+                            {{ form.weight(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.weight.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.weight(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.sex(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.age.label(class="form-control-label") }}
-                {% if form.age.errors %}
-                    {{ form.age(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.age.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="form-group">
+                        {{ form.height.label(class="form-control-label") }}
+                        {% if form.height.errors %}
+                            {{ form.height(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.height.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.height(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.age(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.weight.label(class="form-control-label") }}
-                {% if form.weight.errors %}
-                    {{ form.weight(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.weight.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="form-group">
+                        {{ form.goal.label(class="form-control-label") }}
+                        {% if form.goal.errors %}
+                            {{ form.goal(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.goal.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.goal(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.weight(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.height.label(class="form-control-label") }}
-                {% if form.height.errors %}
-                    {{ form.height(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.height.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="form-group">
+                        {{ form.activity.label(class="form-control-label") }}
+                        {% if form.activity.errors %}
+                            {{ form.activity(class="form-control form-control-lg is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.activity.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.activity(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.height(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.goal.label(class="form-control-label") }}
-                {% if form.goal.errors %}
-                    {{ form.goal(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.goal.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
+                    <div class="input_field">
+                        {{ form.servings.label(class="form-control-label") }}
+                        {% if form.servings.errors %}
+                            {{ form.servings(class="form-control form-control-xxl is-invalid") }}
+                            <div class="invalid-feedback">
+                                {% for error in form.servings.errors %}
+                                    <span>{{ error }}</span>
+                                {% endfor %}
+                            </div>
+                        {% else %}
+                            {{ form.servings(class="form-control form-control-lg") }}
+                        {% endif %}
                     </div>
-                {% else %}
-                    {{ form.goal(class="form-control form-control-xxl") }}
-                {% endif %}
+                <div class="form-group">
+                    {{ form.picture.label() }}
+                    {{ form.picture(class = 'form-control-file')}}
+                    {% if form.picture.errors %}
+                            {% for error in form.picture.errors %}
+                                <span class="text-danger">{{ error }}</span>
+                            {% endfor %}
+                    {% endif %}
+                </div>
+            </fieldset>
+            <div class="form-group">
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
-            <div class="input_field">
-                {{ form.activity.label(class="form-control-label") }}
-                {% if form.activity.errors %}
-                    {{ form.activity(class="form-control form-control-xxl is-invalid") }}
-                    <div class="invalid-feedback">
-                        {% for error in form.activity.errors %}
-                            <span>{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                {% else %}
-                    {{ form.activity(class="form-control form-control-xxl") }}
-                {% endif %}
-            </div>
-            <div class="input_field">
-                {{ form.picture.label() }}
-                {{ form.picture(class = 'form-control-file')}}
-                {% if form.picture.errors %}
-                        {% for error in form.picture.errors %}
-                            <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
-                {% endif %}
-            </div>
-        </fieldset>
         </form>
-        <div class="input_field">
-            {{ form.submit(class="btn btn-outline-info") }}
-        </div>
     </div>
-
 {% endblock content %}
