--- a/main/templates/meals.html
+++ b/main/templates/meals.html
@@ -1,13 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
-<link href="{{ url_for('static', filename='meals.css') }}" rel="stylesheet">
-    <div class="wrapper">
+<div class="content-section">
     <form method="POST" action="">
         {{ form.hidden_tag() }}
-        <div class = "title">
-            Choose avaible dishes
-        </div>
-        <!-- <legend class="border-bottom mb-4">Choose avaible dishes</legend> -->
+        <legend class="border-bottom mb-4">Test Form</legend>
         {{ form.search() }} <br>
         {% if form.meals.errors %}
             <div class="invalid-feedback">
