--- a/main/templates/settings.html
+++ b/main/templates/settings.html
@@ -37,6 +37,19 @@
                     </div>
                 </fieldset>
         {% endfor %}
+        <div class="input_field">
+            {{ form.option.label(class="form-control-label") }}
+            {% if form.option.errors %}
+                {{ form.option(class="form-control form-control-xxl is-invalid") }}
+                <div class="invalid-feedback">
+                    {% for error in form.option.errors %}
+                        <span>{{ error }}</span>
+                    {% endfor %}
+                </div>
+            {% else %}
+                {{ form.option(class="form-control form-control-xxl") }}
+            {% endif %}
+        </div>
         <div class="form-group">
             {{ form.submit(class="btn btn-outline-info") }}
         </div>
