--- a/main/static/account.css
+++ b/main/static/account.css
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
@@ -14,20 +14,20 @@ body {
 }
 
 .content-section{
-    background: #fff;
-    margin-bottom: 150px;
-    max-width: 900px;
+    background-color: #fff;
     width: 100%;
-    margin: 20px auto;
+    margin-bottom: 150px;
+    margin: 40px auto;
     padding: 30px;
+    border: 3px solid #a4cfbc;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
-    border: 2.5px solid #a4cfbc;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-
 }
+
+
 .account-heading {
     margin-left: 90px;
     margin-top: 50px;
@@ -73,6 +73,16 @@ body {
     color: #fff;
 }
 
+#settings {
+    background-color: #a4cfbc;
+    color: #757575;
+}
+
+#settings:hover {
+    background-color: #57817f;
+    color: #fff;
+}
+
 #personal_plan {
     background-color: #a4cfbc;
     color: #757575;
@@ -86,15 +96,6 @@ body {
     color: #757575;
 }
 #log_out:hover {
-    background-color: #57817f;
-    color: #fff;
-}
-
-#settings{
-    background-color: #a4cfbc;
-    color: #757575;
-}
-#settings:hover {
     background-color: #57817f;
     color: #fff;
 }
