--- a/main/static/calculator.css
+++ b/main/static/calculator.css
@@ -7,23 +7,23 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
-    margin-top: 350px;
+    margin-top: 65px;
     background: #fff9f5;
     padding: 0 10px;
 }
 
 .wrapper {
-    max-width: 500px;
-    width: 100%;
+    /* max-width: 500px;
+    width: 100%; */
     background: #fff;
-    margin: 20px auto;
+    margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
 }
 
 .wrapper .title {
