--- a/main/static/login.css
+++ b/main/static/login.css
@@ -1,44 +1,54 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 body {
-margin-top: 75px;
-background: #fff9f5;
-padding: 0 10px;
+    margin-top: 62px;
+    background: #fff9f5;
+    padding: 0 10px;
 }
 
 .wrapper {
-max-width: 500px;
-width: 100%;
-background: #fff;
-margin: 20px auto;
-padding: 30px;
-box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
-border: 2.5px solid #a4cfbc;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+    /* max-width: 500px;
+    width: 100%; */
+    background: #fff;
+    margin: 100px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+    border: 2.5px solid #a4cfbc;
+    /* position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
 }
 .border-top {
-    margin-top: 500px;
+    /* margin-top: 500px; */
+    margin-top: -60px;
+    font-family: 'Montserrat', sans-serif;
 }
-
+.text-muted{
+    color: #757575;
+    /* margin-top: -200px; */
+}
+.forgot{
+    color: #757575;
+    /* margin-top: -200px; */
+    margin-left: 310px;
+}
 .wrapper .title {
-font-size: 22px;
-font-weight: 700;
-margin-bottom: 25px;
-color: #ffce59;
-text-align: center;
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: #ffce59;
+    text-align: center;
 }
 
 .wrapper .form {
-width: 100%;
+    width: 100%;
 }
 
 .wrapper .form .input_field {
@@ -143,6 +153,9 @@ color: #757575;
     margin: 0 auto;
     display: block;
 }
+/* .wrapper .input_field.forgot"{
+    margin-right: 15px;
+} */
 .wrapper .input_field:last-child{
     margin-bottom:0;
     display: flex;
