--- a/main/static/main_bar.css
+++ b/main/static/main_bar.css
@@ -1,4 +1,50 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+
+body {
+    margin-top: 62px;
+    color: #757575;
+    margin-bottom: 25px;
+}
+.wrapper{
+    /* margin-top: 500px;
+    max-width: 500px; */
+    margin: 40px auto;
+    /* width: 100%; */
+    /* background: #fff;
+    margin: 20px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+    border: 2.5px solid #a4cfbc;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+
+}
+.wrapper.meals{
+  background: #fff;
+  margin: 100px auto;
+  padding: 30px;
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+  border: 2.5px solid #a4cfbc;
+}
+.title{
+  margin-top: 50px;
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 25px;
+  color: #ffce59;
+  text-align: center;
+}
 .progress-bar {
+  margin-top: 20px;
   background-color: #a4cfbc;
   position: relative;
   width: auto;
@@ -22,146 +68,45 @@
   justify-content: center;
   font-weight: bold;
 }
-/* .panel-body {
-background: #fff9f5;
-color: #333333;
-margin-top: 5rem;
-}
-.wrapper .title {
-  font-size: 22px;
-  font-weight: 700;
-  margin-bottom: 25px;
-  color: re;
-  text-align: center;
-  }
-
-button#daily_distribution {
-  margin-top: 200px;
-  margin-bottom: 30px;
-  background-color: #a4cfbc;
-  color: #fff9f5;
-  font-size: 20px;
-  padding: 10px 20px;
-  border: #ffce59;
-  border-radius: 3px;
-}
-button#add_meal {
-  background-color: #a4cfbc;
-  color: #fff9f5;
-  font-size: 20px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 3px;
-}
-
-.button-container {
-  background-color: #4b791c;
+.input_field {
+  margin-top: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   flex-direction: column;
 }
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-/* button {
-  background-color: #ffce59;
-  color: #ffce59;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 10px;
-} */
-
-button:hover {
-  background-color: #a4cfbc;
-  cursor: pointer;
-}
-
-.bg-steel {
-  background-color: #57817f;
-}
-
-.site-header .navbar-nav .nav-link {
-  color: #cbd5db;
-}
-
-.site-header .navbar-nav .nav-link:hover {
-  color: #ffce59;
-}
-
-.site-header .navbar-nav .nav-link.active {
-  font-weight: 500;
-  color: #ffce59;
-}
-
-.content-section {
-  background: #fff9f5;
-  padding: 10px 20px;
-  border: 1px solid #dddddd;
-  border-radius: 3px;
-  margin-bottom: 20px;
-}
-
-.article-title {
-  color: #444444;
-}
-
-/* a.article-title:hover {
-  color: #ffce59;
-  text-decoration: none;
-} */
-
-.article-content {
-  white-space: pre-line;
-}
-
-.article-img {
-  height: 65px;
-  width: 65px;
-  margin-right: 16px;
-}
-
-.article-metadata {
-  color: #57817f;
-  padding-bottom: 1px;
-  margin-bottom: 4px;
-  border-bottom: 1px solid #e3e3e3
-}
-
-/* .article-metadata a:hover {
-  color: red;
-  text-decoration: none;
-} */
-
-.article-svg {
-  width: 25px;
-  height: 25px;
-  vertical-align: middle;
-}
-
-.account-img {
-  height: 125px;
-  width: 125px;
-  margin-right: 20px;
-  margin-bottom: 16px;
-}
-
-.account-heading {
-  font-size: 2.5rem;
-}
-
-.panel-img {
+.form-control {
+  text-align: center;
+  margin-bottom: 10px;
+  width: 300px;
   height: 40px;
-  width: 40px;
+  border: none;
+  border-radius: 5px;
+  background-color: #f5f5f5;
+  font-size: 16px;
+  font-weight: bold;
+  color: #757575;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
-.mr-2 {
-  background: #fff9f5;;
-  font-size: 16px; /* Change the font size */
-  color: #57817f /* Change the text color */
-  text-decoration: none; /* Remove the underline */
-  /* Add any other styles you want here */
+
+#daily_distribution{
+  background-color: #57817f;
+  color: #fff;
+  margin-top: 30px;
+
 }
+#all_meal {
+  background-color: #57817f;
+  color: #fff;
+
+}
+#daily_distribution:hover {
+  color: #757575;
+  background-color: #a4cfbc;
+}
+#all_meal:hover {
+  color: #757575;
+  background-color: #a4cfbc;
+}
+
