--- a/main/static/meals.css
+++ b/main/static/meals.css
@@ -1,14 +1,64 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 body {
-margin-top: 100px;
-background: #fff9f5;
-padding: 0 10px;
-position: center;
+    margin-top: 62px;
+    background: #fff9f5;
+    padding: 0 10px;
+    /* position: center; */
+}
+
+
+.wrapper {
+    margin: 40px auto;
+    width: 100%;
+}
+
+.wrapper .title {
+    font-size: 22px;
+    font-weight: 700;
+    margin-bottom: 25px;
+    color: #ffce59;
+    text-align: center;
+}
+.category-buttons{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.category-btn {
+    color: #fff;
+    background-color: #57817f;
+    padding: 5px 10px;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 3px;
+}
+.form-check {
+    margin-top: 40px;
+    color: #57817f;
+}
+.wrapper .btn {
+    margin-left: 575px;
+    background-color: #a4cfbc;
+    color: #fff;
+    margin-bottom: 15px;
+    border: 0;
+}
+
+.wrapper .input_field:last-child{
+    margin-bottom:0;
+    display: flex;
+}
+.wrapper .input_field:last-child .btn{
+    margin-right: 0px;
+}
+.wrapper .input_field .btn:hover{
+    background: #ffd658;
 }
