--- a/main/static/reset_token.css
+++ b/main/static/reset_token.css
@@ -10,68 +10,20 @@ body {
     margin-top: 62px;
     background: #fff9f5;
     padding: 0 10px;
-    /* margin-bottom: 100px; */
 }
-
-.media {
-    display: flex;
-    align-items: center;
-    margin-bottom: 30px
-}
-
-.account-img {
-    margin-top: 10px;
-    /* width: 150px;
-    height: 150px; */
-    object-fit: cover;
-}
-/* email */
-.media-body {
-    margin-left: 100px;
-    /* font-size: 10px; */
-    line-height: 1.2;
-}
-.account-heading {
-    margin-left: 150px;
-    margin-top: 50px;
-    font-size: 30px;
-  }
-.text-secondary{
-    margin-left: 150px;
-    font-size: 15px;
-    margin-bottom: 50px;
-}
-/*
-.account-heading {
-    font-size: 20px;
-    margin-top: 10px;
-}
-.secondary{
-    font-size: 20px;
-    margin-left: 300px;
-} */
-
 
 .wrapper {
-
-    /* text-align: center;
-    max-width: 550px;
-    width: 100%; */
+    max-width: 500px;
+    width: 100%;
     background: #fff;
     margin: 40px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    /* position: absolute;
+    position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    margin-top: 450px;
-    margin-left: 50px;
-    margin-bottom: 500px; */
-}
-.border-top {
-    margin-top: 500px;
 }
 
 .wrapper .title {
@@ -109,24 +61,23 @@ body {
     border-radius: 3px;
     transition: all 0.3s ease;
 }
-
-
-.wrapper .form .input_field.terms p{
-    margin-top: 15px;
-    margin-left: -175px;
-    font-size: 14px;
-    color: #757575;
-    font-weight: 400;
-    font-family: 'Montserrat', sans-serif;
+.wrapper .input_field{
+    margin-top: 40px;
 }
+.wrapper .form .input_field .input:focus,
+.wrapper .form .input_field .textarea:focus {
+border: 1px solid #ffce59;
+}
+
 
 .wrapper .btn {
     margin-left: 10px;
 }
 
 .wrapper .input_field .btn{
-    width: 100px;
+    width: 150px;
     padding: 8px 10px;
+    margin-top: 20px;
     font-size: 15px;
     border: 0;
     background-color: #a4cfbc;
@@ -137,6 +88,7 @@ body {
     margin: 0 auto;
     display: block;
 }
+
 .wrapper .input_field:last-child{
     margin-bottom:0;
     display: flex;
@@ -147,4 +99,3 @@ body {
 .wrapper .input_field .btn:hover{
     background: #ffd658;
 }
-
