--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -53,5 +53,8 @@
     <small class="text-muted">
         Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
     </small>
+    <small class="forgot">
+        Forgot Password? <a class ="ml-3" href="{{ url_for('reset_request') }}">Click Here</a>
+    </small>
 </div>
 {% endblock content %}
