--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -1,39 +1,42 @@
 {% extends "layout.html" %}
 {% block content %}
 <link href="{{ url_for('static', filename='main_bar.css') }}" rel="stylesheet">
-<h5 align="center">Calories consumed today</h5>
+<div class = "title">
+  Calories consumed today
+</div>
 <div class="progress-bar" role="progressbar">
     <div class="progress-bar-value">0%</div>
     <div class="progress-bar-fill"></div>
 </div>
-
 <br>
-
-<form method="POST" action="">
-  {% set total_calories = 0 %}
-  {% for meal in meals %}
-  {% set total_calories = total_calories + meal.calories %}
-  <article class="media content-section">
-    <div class="media-body">
-    <div class="article-metadata">
-        <a class="mr-2" href="#">{{ meal.name }}</a>
-        <small class="text-muted">{{ meal.calories }}</small>
-        {% if meal.choicen == False%}
-          <input type="checkbox" id="{{ meal.name }}" style="display:none"></input>
-        {% else %}
-          <input type="checkbox" id="{{ meal.name }}">Consumed</input>
-        {% endif %}
-        <div>
-            {% if meal.choicen == False %}
-              <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('choose_dishes', meal_id = meal.id)}}">Choose Dishes</a>
-            {% else %}
-              <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('show_dish', meal_id = meal.id)}}">Show Dish</a>
-              <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('view_dishes', meal_id = meal.id)}}">Change Dish</a>
-            {% endif %}
-            <a class="btn btn-danger btn-sm m-1" href="{{url_for('delete_meal', meal_id = meal.id)}}">Delete Dish</a>
-        </div>
-  </article>
-  {% endfor %}
+<div class="wrapper">
+  <div class="meals">
+  <!-- <form method="POST" action=""> -->
+    {% set total_calories = 0 %}
+    {% for meal in meals %}
+    {% set total_calories = total_calories + meal.calories %}
+    <article class="media content-section">
+      <div class="media-body">
+        <label class="text-secondary">{{ meal.name }}</label>
+          <small class="text-muted">{{ meal.calories }}</small>
+          {% if meal.choicen == False%}
+            <input type="checkbox" id="{{ meal.name }}" style="display:none"></input>
+          {% else %}
+            <input type="checkbox" id="{{ meal.name }}">Consumed</input>
+          {% endif %}
+          <div>
+              {% if meal.choicen == False %}
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('choose_dishes', meal_id = meal.id)}}">Choose Dishes</a>
+              {% else %}
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('show_dish', meal_id = meal.id)}}">Show Dish</a>
+                <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{url_for('view_dishes', meal_id = meal.id)}}">Change Dish</a>
+              {% endif %}
+              <a class="btn btn-danger btn-sm m-1" href="{{url_for('delete_meal', meal_id = meal.id)}}">Delete Dish</a>
+          </div>
+      </div>
+    </article>
+    {% endfor %}
+  </div>
   <form method="POST" action="">
     {% if not meals %}
     <div class="input_field">
@@ -44,8 +47,7 @@
       <input type="submit", name="submit_button", value="Add Meal", class="form-control", id="all_meal">
     </div>
   </form>
-</form>
-
+</div>
 <script>
   class ProgressBar {
   constructor(element, initialValue = 0) {
