--- a/main/templates/reset_request.html
+++ b/main/templates/reset_request.html
@@ -1,25 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+    <link href="{{ url_for('static', filename='reset_request.css') }}" rel="stylesheet">
+    <div class="wrapper">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                <div class="form-group">
+            <fieldset class="form">
+                <div class="title">
+                    Reset Password
+                </div>
+                <div class="input_field">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid") }}
+                        {{ form.email(class="form-control form-control-xxl is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.email.errors %}
                                 <span>{{ error }}</span>
                             {% endfor %}
                         </div>
                     {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
+                        {{ form.email(class="form-control form-control-xxl") }}
                     {% endif %}
                 </div>
             </fieldset>
-            <div class="form-group">
+            <div class="input_field">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
