--- a/main/templates/reset_token.html
+++ b/main/templates/reset_token.html
@@ -1,11 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="content-section">
+    <link href="{{ url_for('static', filename='reset_token.css') }}" rel="stylesheet">
+    <div class="wrapper">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Reset Password</legend>
-                <div class="form-group">
+            <fieldset class="form">
+                <div class="title">
+                    Reset Password
+                </div>
+                <div class="input_field">
                     {{ form.password.label(class="form-control-label") }}
                     {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -18,7 +21,7 @@
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
-                <div class="form-group">
+                <div class="input_field">
                     {{ form.confirm_password.label(class="form-control-label") }}
                     {% if form.confirm_password.errors %}
                         {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
@@ -32,7 +35,7 @@
                     {% endif %}
                 </div>
             </fieldset>
-            <div class="form-group">
+            <div class="input_field">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
         </form>
