--- a/main/templates/results.html
+++ b/main/templates/results.html
@@ -1,18 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-    <form method="POST" action="">
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Available Options</legend>
-            {% for meal in results %}
-                <div class="form-check">
+    <link href="{{ url_for('static', filename='results.css') }}" rel="stylesheet">
+    <div class="wrapper">
+        <div class = "title">
+            Available Options
+        </div>
+        <div class = "input_field">
+        {% for meal in results %}
+            <fieldset class="form-group">
+                <div class="info">
                     {{ meal }}
                 </div>
-            {% endfor %}
-        </fieldset>
+            </fieldset>
+        {% endfor %}
+        </div>
         <div class="form-group">
             <a class="form-control" href="{{ url_for("main") }}">Exit</a>
         </div>
-    </form>
-</div>
+    </div>
 {% endblock content %}
