--- a/main/static/account.css
+++ b/main/static/account.css
@@ -1,54 +1,54 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 *{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-font-family: 'Montserrat', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Montserrat', sans-serif;
 }
 
 body {
+    margin-top: 62px;
     color: #757575;
-    margin-top: 325px;
+    /* margin-top: 325px; */
     margin-bottom: 25px;
 }
 
 .content-section{
-    background: #fff;
-    margin-bottom: 150px;
-    max-width: 900px;
-    width: 100%;
-    margin: 20px auto;
+    background-color: #fff;
+    /* width: 100%;
+    margin-bottom: 150px; */
+    margin: 100px auto;
     padding: 30px;
+    border: 3px solid #a4cfbc;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
-    border: 2.5px solid #a4cfbc;
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
+    transform: translate(-50%, -50%); */
 }
+
+
 .account-heading {
+    margin: 0 auto;
     margin-left: 90px;
     margin-top: 50px;
     font-size: 28px;
   }
 .text-secondary{
+    margin: 0 auto;
     margin-left: 150px;
     font-size: 15px;
     margin-bottom: 50px;
 }
 
 
-.input_field {
+.form-control {
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}
-
-
-.form-control {
     text-align: center;
     margin-bottom: 20px;
     width: 300px;
@@ -64,11 +64,22 @@ body {
 }
 
 #personal_info {
+    text-align: center;
     background-color: #a4cfbc;
     color: #757575;
 }
 
 #personal_info:hover {
+    background-color: #57817f;
+    color: #fff;
+}
+
+#settings {
+    background-color: #a4cfbc;
+    color: #757575;
+}
+
+#settings:hover {
     background-color: #57817f;
     color: #fff;
 }
