--- a/main/static/account_update.css
+++ b/main/static/account_update.css
@@ -7,11 +7,14 @@
     font-family: 'Montserrat', sans-serif;
 }
 body {
+    margin-top: 62px;
     background: #fff9f5;
     padding: 0 10px;
-    margin-bottom: 100px;
+    /* margin-bottom: 100px; */
 }
-
+.main{
+    margin: 40px auto;
+}
 .media {
     display: flex;
     align-items: center;
@@ -40,34 +43,39 @@ body {
     font-size: 15px;
     margin-bottom: 50px;
 }
-/*
-.account-heading {
-    font-size: 20px;
-    margin-top: 10px;
-}
-.secondary{
-    font-size: 20px;
-    margin-left: 300px;
-} */
 
 
-.wrapper {
-
-    text-align: center;
-    max-width: 550px;
-    width: 100%;
+.info{
+    color: #757575;
+    /* font-size: 8px; */
     background: #fff;
-    margin: 20px auto;
+    margin: 40px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
-    position: absolute;
+}
+.secondary{
+    font-size: 16px;
+    font-weight: 700;
+    /* margin-left: 300px; */
+}
+.wrapper {
+
+    /* text-align: center;
+    max-width: 550px;
+    width: 100%; */
+    background: #fff;
+    margin: 40px auto;
+    padding: 30px;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
+    border: 2.5px solid #a4cfbc;
+    /* position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     margin-top: 450px;
     margin-left: 50px;
-    margin-bottom: 500px;
+    margin-bottom: 500px; */
 }
 .border-top {
     margin-top: 500px;
