--- a/main/static/settings.css
+++ b/main/static/settings.css
@@ -16,7 +16,7 @@ body {
     /* max-width: 500px;
     width: 100%; */
     background: #fff;
-    margin: 80px auto;
+    margin: 100px auto;
     padding: 30px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
     border: 2.5px solid #a4cfbc;
@@ -32,43 +32,38 @@ body {
     margin-bottom: 25px;
     color: #ffce59;
     text-align: center;
-    /* background: #fff; */
+}
+.name {
+    align-items: center;
+    margin-bottom: 15px;
+    color: #57817f;
+}
+.choices{
+    /* margin-top: 120px; */
+    margin-left: 50px;
+    margin-right: auto;
+    color: #a4cfbc;
+    /* text-align: center; */
 }
 .wrapper .form {
     width: 100%;
-    /* background: #fff; */
-}
-.wrapper .input_field_check_box {
-    /* text-align: center; */
-    margin-top: 20px;
-    margin-bottom: 15px;
-    display: flex;
-    /* margin-left: 50px; */
-    align-items: center;
-}
-.wrapper .input_field_check_box label{
-    margin-top: 7px;
-    width: 200px;
-    color: #757575;
-    margin-left: 20px;
-    font-size: 14.2px;
-}
-.wrapper .input_field {
-    /* background-color: #fff; */
-    margin-top: 20px;
-    margin-bottom: 15px;
-    display: flex;
-    align-items: center;
 }
 
-.wrapper .input_field label {
+.wrapper .form .input_field {
+margin-top: 20px;
+margin-bottom: 15px;
+display: flex;
+align-items: center;
+}
+
+.wrapper .form .input_field label {
     width: 200px;
-    color: #757575;
+    color: #57817f;
     margin-right: 10px;
-    font-size: 14.2px;
+    /* font-size: 14.2px; */
 }
 
-.wrapper .input_field .input {
+.wrapper .form .input_field .input {
     width: 100%;
     outline: none;
     border: 1px solid #d5dbd9;
@@ -76,19 +71,16 @@ body {
     padding: 8px 10px;
     border-radius: 3px;
     transition: all 0.3s ease;
-    background-color: #fff;
 }
 
-
-.wrapper .form .input_field:last-child {
-    display: flex;
-    justify-content: flex-end;
-}
 .wrapper .btn {
     margin-left: 10px;
-  }
+    /* padding: 10 auto; */
+    /* margin-top: 50px; */
+}
 
 .wrapper .input_field .btn{
+    /* margin-top: 50px; */
     width: 100px;
     padding: 8px 10px;
     font-size: 15px;
@@ -101,6 +93,9 @@ body {
     margin: 0 auto;
     display: block;
 }
+/* .wrapper .input_field.forgot"{
+    margin-right: 15px;
+} */
 .wrapper .input_field:last-child{
     margin-bottom:0;
     display: flex;
@@ -110,12 +105,4 @@ body {
 }
 .wrapper .input_field .btn:hover{
     background: #ffd658;
-}
-#result{
-    /* background: #fff; */
-    margin-top: 30px;
-    width: 200px;
-    color: #757575;
-    margin-right: 10px;
-    font-size: 14.2px;
 }
