--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="shortcut icon" href="{{ url_for('static', filename = 'profile_pics/' + 'logo.jpg' ) }}" type="image/x-icon">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta
@@ -26,7 +27,7 @@
   <body>
     <header class="site-header">
       <nav class="navbar navbar-expand-lg navbar-dark bg-steel fixed-top">
-        <div class="container">
+        <div class="container header-container">
           <a class="navbar-brand mr-4" href="{{ url_for('main') }}">UCU Health</a>
           <button
             class="navbar-toggler"
@@ -47,7 +48,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
             {% if current_user.is_authenticated %}
-              <a class="nav-item nav-link" href="{{ url_for("account") }}"><img class="rounded-circle panel-img" src="{{ url_for('static', filename = 'profile_pics/' + current_user.image_file ) }} "></a>
+              <a class="nav-item nav-link" href="{{ url_for("account") }}"><img class="rounded-circle panel-img" src="{{ url_for('static', filename = 'profile_pics/' + current_user.image_file ) }}"></a>
             {% else %}
               <a class="nav-item nav-link" href="{{ url_for("login") }}">Login</a>
               <a class="nav-item nav-link" href="{{ url_for("register") }}">Register</a>
