--- a/main/templates/login.html
+++ b/main/templates/login.html
@@ -43,15 +43,15 @@
         </fieldset>
         <div class="input_field">
             {{ form.submit(class="btn btn-outline-info") }}
-            <small class="text-muted ml-2">
-                <a href="{{ url_for('reset_request') }}">Forgot Password?</a>
-            </small>
         </div>
     </form>
 </div>
 <div class="border-top">
     <small class="text-muted">
         Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+    </small>
+    <small class="forgot">
+        Forgot Password? <a class ="ml-3" href="{{ url_for('reset_request') }}">Click Here</a>
     </small>
 </div>
 {% endblock content %}
