--- a/main/templates/menu.html
+++ b/main/templates/menu.html
@@ -1,19 +1,29 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
-        <legend class="border-bottom mb-4">Menu</legend>
+    <link href="{{ url_for('static', filename='menu.css') }}" rel="stylesheet">
+    <div class="wrapper">
+        <div class = "title">
+            Menu
+        </div>
+        <div class = "input_field">
         {% for category in meals %}
-            {{ category.title() }}
-                <fieldset class="form-group">
-                    {% for meal in meals[category] %}
-                        {{ meal }}:<br>
+            <div class="name">
+                {{ category.title() }}:
+            </div>
+            <fieldset class="form-group">
+                {% for meal in meals[category] %}
+                <div class = "info">
+                    {{ meal }}:<br>
+                    <div class = "elem">
                         Calories: {{meals[category][meal][0]}}<br>
                         Proteins: {{meals[category][meal][1]}}<br>
                         Carbohydrates: {{meals[category][meal][2]}}<br>
                         Fats: {{meals[category][meal][3]}}<br>
-                        <p></p>
-                    {% endfor %}
-                </fieldset>
+                    </div>
+                {% endfor %}
+                </div>
+            </fieldset>
         {% endfor %}
-</div>
+        </div>
+    </div>
 {% endblock content %}
