--- a/main/templates/view_dishes.html
+++ b/main/templates/view_dishes.html
@@ -25,9 +25,9 @@
                             <!-- {{ radio() }} -->
                             <div class = "elem">
                                 Calories: {{ dishes[choice[0]].calories }}<br>
-                                Proteins: {{ dishes[choice[0]].calories }}<br>
-                                Carbohydrates: {{ dishes[choice[0]].calories }}<br>
-                                Fats: {{ dishes[choice[0]].calories }}<br>
+                                Proteins: {{ dishes[choice[0]].proteins }}<br>
+                                Carbohydrates: {{ dishes[choice[0]].carbs }}<br>
+                                Fats: {{ dishes[choice[0]].fats }}<br>
                             </div>
                         </fieldset>
                     {% endfor %}
